--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,12 @@ verify_ssl = true
 [dev-packages]
 mypy = "*"
 autopep8 = "*"
+pylint = "*"
 
 [packages]
+django = "*"
+djangorestframework = "*"
+django-rest-knox = "*"
 
 [requires]
 python_version = "3.7"
