--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-	"name": "leadmanger",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@types/jest": "24.0.11",
-		"@types/node": "11.13.6",
-		"@types/react": "16.8.14",
-		"@types/react-dom": "16.8.4",
+	"name": "leadmanager",
+	"version": "1.0.0",
+	"description": "",
+	"main": "webpack.config.js",
+	"dependencies": {},
+	"devDependencies": {
+		"@babel/core": "^7.4.4",
+		"@babel/preset-env": "^7.4.4",
+		"@babel/preset-react": "^7.0.0",
+		"babel-loader": "^8.0.5",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
-		"react-scripts": "2.1.8",
-		"typescript": "3.4.4"
+		"webpack": "^4.30.0",
+		"webpack-cli": "^3.3.1"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"dev": "webpack --mode development ./leadmanager/frontend/src/index.js --output ./leadmanager/frontend/static/frontend/main.js",
+		"build": "webpack --mode production ./leadmanager/frontend/src/index.js --output ./leadmanager/frontend/static/frontend/main.js"
 	},
-	"eslintConfig": {
-		"extends": "react-app"
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/AbdulRayhman/LeadManagerApp.git"
 	},
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	]
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/AbdulRayhman/LeadManagerApp/issues"
+	},
+	"homepage": "https://github.com/AbdulRayhman/LeadManagerApp#readme"
 }
